Make Schema AST name immutable
* Set schema node names during deserialisation
* Refactor Gson functionality
* Tests
* Return String from EntityExpression.getQualifiedEid