@@ -1,6 +1,7 @@
 package uq.pac.rsvp.policy.ast.schema;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.IOException;
@@ -13,15 +14,11 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
 
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
-import com.google.gson.Gson;
-import com.google.gson.GsonBuilder;
-
-import uq.pac.rsvp.policy.ast.schema.CommonTypeDefinition.CommonTypeDefinitionDeserialiser;
+import uq.pac.rsvp.policy.ast.JsonParser;
 import uq.pac.rsvp.policy.ast.visitor.SchemaResolutionVisitor;
 
 @DisplayName("Schema entity type AST")
@@ -30,22 +27,12 @@ public class EntityTypeDefinitionTest {
     @DisplayName("Parse JSON")
     class TestJSON {
 
-        static Gson gson;
-
-        @BeforeAll
-        static void beforeAll() {
-            gson = new GsonBuilder()
-                    .registerTypeAdapter(CommonTypeDefinition.class, new CommonTypeDefinitionDeserialiser())
-                    .disableJdkUnsafe()
-                    .create();
-        }
-
         @Test
         @DisplayName("Handles empty entity")
         void empty() throws IOException {
             URL url = ClassLoader.getSystemResource("empty-entity.cedarschema.json");
             String json = Files.readString(Path.of(url.getPath()));
-            Schema schema = gson.fromJson(json, Schema.class);
+            Schema schema = JsonParser.parseSchema(json);
 
             schema.accept(new SchemaResolutionVisitor());
 
@@ -68,7 +55,7 @@ public class EntityTypeDefinitionTest {
         void memberOf() throws IOException {
             URL url = ClassLoader.getSystemResource("entity-refs.cedarschema.json");
             String json = Files.readString(Path.of(url.getPath()));
-            Schema schema = gson.fromJson(json, Schema.class);
+            Schema schema = JsonParser.parseSchema(json);
 
             schema.accept(new SchemaResolutionVisitor());
 
@@ -87,7 +74,7 @@ public class EntityTypeDefinitionTest {
         void unresolved() throws IOException {
             URL url = ClassLoader.getSystemResource("entity-refs.cedarschema.json");
             String json = Files.readString(Path.of(url.getPath()));
-            Schema schema = gson.fromJson(json, Schema.class);
+            Schema schema = JsonParser.parseSchema(json);
 
             schema.accept(new SchemaResolutionVisitor());
 
@@ -112,17 +99,21 @@ public class EntityTypeDefinitionTest {
             Schema schema = new Schema();
 
             Map<String, EntityTypeDefinition> entities = new HashMap<>();
-            entities.put("SomeEntity", new EntityTypeDefinition());
-            entities.put("AnotherEntity", new EntityTypeDefinition(Collections.emptySet(), Collections.emptyMap(),
-                    Collections.emptySet(), Collections.emptyMap()));
+            entities.put("SomeEntity", new EntityTypeDefinition("App::SomeEntity"));
+            entities.put("AnotherEntity",
+                    new EntityTypeDefinition("App::AnotherEntity", Collections.emptySet(), Collections.emptyMap(),
+                            Collections.emptySet(), Collections.emptyMap()));
 
-            Namespace app = new Namespace(entities, null);
-            schema.put("App", app);
+            Namespace app = new Namespace("App", entities, null);
+            schema.add(app);
 
             schema.accept(new SchemaResolutionVisitor());
 
             EntityTypeDefinition some = schema.getEntityType("App::SomeEntity");
             EntityTypeDefinition another = schema.getEntityType("App::AnotherEntity");
+
+            assertNotNull(some);
+            assertNotNull(another);
 
             assertEquals(0, some.getEntityNamesEnum().size());
             assertEquals(0, some.getMemberOfTypes().size());
@@ -141,18 +132,19 @@ public class EntityTypeDefinitionTest {
             Schema schema = new Schema();
 
             Map<String, EntityTypeDefinition> appEntities = new HashMap<>();
-            appEntities.put("Item", new EntityTypeDefinition());
-            appEntities.put("User", new EntityTypeDefinition(Set.of("Lib::Role", "Item"), Collections.emptyMap(),
-                    Collections.emptySet()));
+            appEntities.put("Item", new EntityTypeDefinition("App::Item"));
+            appEntities.put("User",
+                    new EntityTypeDefinition("App::User", Set.of("Lib::Role", "Item"), Collections.emptyMap(),
+                            Collections.emptySet()));
 
-            Namespace app = new Namespace(appEntities, null);
-            schema.put("App", app);
+            Namespace app = new Namespace("App", appEntities, null);
+            schema.add(app);
 
             Map<String, EntityTypeDefinition> libEntities = new HashMap<>();
-            libEntities.put("Role", new EntityTypeDefinition());
+            libEntities.put("Role", new EntityTypeDefinition("Lib::Role"));
 
-            Namespace lib = new Namespace(libEntities, null);
-            schema.put("Lib", lib);
+            Namespace lib = new Namespace("Lib", libEntities, null);
+            schema.add(lib);
 
             assertEquals(0, app.getEntityType("User").getMemberOfTypes().size());
 
@@ -162,6 +154,9 @@ public class EntityTypeDefinitionTest {
             EntityTypeDefinition user = schema.getEntityType("App::User");
             EntityTypeDefinition role = schema.getEntityType("Lib::Role");
 
+            assertNotNull(item);
+            assertNotNull(user);
+            assertNotNull(role);
             assertEquals(2, user.getMemberOfTypes().size());
 
             assertTrue(user.getMemberOfTypes().contains(role));
@@ -176,22 +171,25 @@ public class EntityTypeDefinitionTest {
 
             Map<String, EntityTypeDefinition> appEntities = new HashMap<>();
             appEntities.put("Loser",
-                    new EntityTypeDefinition(Set.of("Lib::Role", "Lib::Invalid"), Collections.emptyMap(),
+                    new EntityTypeDefinition("App::Loser", Set.of("Lib::Role", "Lib::Invalid"), Collections.emptyMap(),
                             Collections.emptySet()));
 
-            Namespace app = new Namespace(appEntities, null);
-            schema.put("App", app);
+            Namespace app = new Namespace("App", appEntities, null);
+            schema.add(app);
 
             Map<String, EntityTypeDefinition> libEntities = new HashMap<>();
-            libEntities.put("Role", new EntityTypeDefinition());
+            libEntities.put("Role", new EntityTypeDefinition("Lib::Role"));
 
-            Namespace lib = new Namespace(libEntities, null);
-            schema.put("Lib", lib);
+            Namespace lib = new Namespace("Lib", libEntities, null);
+            schema.add(lib);
 
             schema.accept(new SchemaResolutionVisitor());
 
             EntityTypeDefinition loser = schema.getEntityType("App::Loser");
             EntityTypeDefinition role = schema.getEntityType("Lib::Role");
+
+            assertNotNull(loser);
+            assertNotNull(role);
 
             assertEquals(1, loser.getMemberOfTypes().size());
 
@@ -204,7 +202,7 @@ public class EntityTypeDefinitionTest {
             EntityTypeDefinition empty = new EntityTypeDefinition();
             assertEquals(0, empty.getEntityNamesEnum().size());
 
-            EntityTypeDefinition enums = new EntityTypeDefinition(null, null, Set.of("One", "Two", "Three"));
+            EntityTypeDefinition enums = new EntityTypeDefinition("", null, null, Set.of("One", "Two", "Three"));
             assertEquals(3, enums.getEntityNamesEnum().size());
 
             assertTrue(enums.getEntityNamesEnum().containsAll(Arrays.asList("One", "Two", "Three")));
